# rewotes

./: .gitattributes  .gitignore  Application-Infrastructure.md  Basis-Set-Selector.md  Cloud-Infrastructure.md  Containerization-HPC.md  Convergence-Tracker.md  Dockerfile  Flowchart-Designer.md  LICENSE  ML-Band-Gaps.md  Make.t1  Materials-Designer.md  Parallel-File-Uploader.md  Pipfile  README.md  aws.config  buffer.py  client.py  file.py  hpl1.def  main.py  notes.txt  package-lock.json  packages.txt  pyproject.toml  raw-hpl.out  requirements.txt  results.txt  run  scanner.py  setup.cfg  setup.py  sing-run.sh  singularity-hpl.out  slurm.conf  terraform.tgz  test  uploader.py  xhpl.sh  (+1 more)
AcylSilane/: README.md  setup.py
BasisSetSelector/: basissetselector.py  groundstateenergies.csv
DrHooshmand/: README.md
EtsukoSusui/: ReadMe.md
GabrielHare/: AWS_HPL_Setup.md  mat3ra-benchmark-cluster-config.yaml
InnaG33/: ML-Band-Gaps.md  Procfile  SiGe_estimator.py  SiGe_lattice_params_BG.csv  SiGe_lattice_params_test.csv  SiGe_lattice_params_train.csv  SiGe_model.py  app.py  requirements.txt  run.sh
JiQi535/: requirements.txt  setup.py
Monterroso/: README.md  package-lock.json  package.json
Vinkersa/: Flowchart-Designer.md  package.json
VsevolodX/: README.md  babel.config.js  npm_installs.txt  package-lock.json  package.json
WDRFlowControl/: README.md  index.html  package.json
aaronstanek/: .gitignore  Material.py  README.md  adding_new_features.md  api_sketch.md  download_test.py  material.proto  requirements.txt  test.py  test_ml.py  test_results.txt  test_results_2.txt  unittests.py
adavaria/: data.ipynb  demo.ipynb  setup.py  train_cgcnn.ipynb  train_cgcnn2.ipynb  train_cgcnn3.ipynb  train_cgcnn4.ipynb  training.ipynb
aliitani/: README.md  README_ALI_ITANI.md
all-rewotes/: Convergence-Tracker.md  End-to-End-Tests.md
almullay/: settings.json  settings.json.bak  settings.py  setup.py
andrewsalij/: Convergence-Tracker.md  convergence_tracker.py  io.py
ansachs/: .env  README.md  requirements.txt  setup.py
azhdankin/: README.md  cloud_storage.py  create_files.py  seed-file.txt  test_create_files.py  upload_files.py  uploader.py
bandgaps/: README.md  composition.py  discussion.md  explore-composition.py  explore-structure.py  explore.py  query.py  requirements.txt  structure.py  strucutre.py  utils.py
boxylmer/: README.md  plan and progress.md  plan, notes, and progress.md
bsmith24/: README.md  setup.py
capolanco/: RunConvergence.py  Si.scf.in  ioclusterclass.py  ioqeclass.py  job.test.sh  job.test1.sh  job.test2.sh  job.test3.sh  job.test4.sh  test.scf.in  test.scf.out  test.scf1.in  test.scf1.out  test.scf2.in  test.scf2.out  test.scf3.in  test.scf3.out  test.scf4.in  test.scf4.out
codeliciousness/: Basis-Set-Selector.md  pyproject.toml  run.sh  test.sh
codeliciousness/basistron/: README.md  app.py  basis.py  cccbdb.py  cli.py  client.py  exabyte.py  main.py  model.py  parser.py  utils.py
codeliciousness/basistron/static/: basis.nw
codeliciousness/test/: conftest.py  test_basis.py  test_cli.py  test_client.py  test_exabyte.py
dcsena/: AsyncDirectoryUploader.py  BaseDirectoryUploader.py  BaseFileUploader.py  README.md  S3FileUploader.py  create_resources_script.py  main.py  requirements.txt
dmrdjenovich/: Convergence.py  EnergyConvergence.py  Test.py  energy_convergence.py  job.pbs  local_test.sh  testing.py
docs/: index.html
draft/: GdSnPd.cif  GdSnPd.json  mp-1103503  (+2 more)
gayverjr/: README.md  setup.cfg
gayverjr/BasisSetSelector/: BasisSetLibrary.py  Optimizer.py  __init__.py  cli.py  mol_classes.py  qc.py
gayverjr/BasisSetSelector/data/: __init__.py  bsl.py  elements.py
gayverjr/examples/: README.md  ex1.json  ex2.json  ex3.json  example.py  example2.py  uracil.xyz
gayverjr/tests/: data.json  h2.xyz  test_bss.py
kvnchv/: .coverage  .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg
kvnchv/.github/workflows/: workflow.yml
kvnchv/converger/: __init__.py  exceptions.py  manager.py  schema.py  version.py
kvnchv/converger/solvers/: __init__.py  base_solver.py  espresso_solver.py
kvnchv/tests/: demo_notebook.ipynb  test_manager.py  test_solver.py
kvnchv/tests/resources/Si/: pw.in
(+1322 files in other folders)
