[metadata]
name = Basis Set Selector
description =
author = Jonathon Vandezande
version =
url = git@github.com:exabyte-io/rewotes
long_description = file: README.md
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules


[options]
python_requires = >= 3.9
test_suite = jevandezande/tests/
packages =
    = jevandezande

[options.entry_points]
console_scripts =
    main = jevandezande.basis_set_selector.cli:main

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 100

[mypy]
files = jevandezande
ignore_missing_imports = true

[flake8]
ignore = E203, E266, E501, W503, E731
max-line-length = 100
max-complexity = 18
select = B, C, E, F, W, T4

[pylint]
max-line-length = 100

[pylint:messages_control]
disable = C0330, C0326

[tool:pytest]
testpaths = jevandezande/tests/
addopts = --doctest-modules
doctest_optionflags = NORMALIZE_WHITESPACE
