[metadata]
name = BasisSetSelector
version = 0.0.0
author = James Gayvert
author_email = jrg444@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[build-system]
requires=['setuptools','wheel']
build-backend = "setuptools.build_meta"

[options.entry_points]
console_scripts =
    optimize_basis = BasisSetSelector.cli:main