[metadata]
name = BasisSetSelector
version = 0.0.0
author = James Gayvert
author_email = jrg444@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[build-system]
requires=['setuptools','wheel']
build-backend = "setuptools.build_meta"

[options.entry_points]
console_scripts =
    optimize_basis = BasisSetSelector.cli:main


[options]
packages = find:
python_requires = >=3.7
install_requires= scikit-learn
include_package_data = True