[metadata]
name = converger
version = attr: converger.version.__version__
author = Kevin C
author_email = kvnchv@gmail.com
description = ReWoTe Convergence
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.6

[pydocstyle]
convention = numpy
ignore-decorators = property
add-ignore = D104

[flake8]
max-line-length = 99
import-order-style = pycharm
per-file-ignores =
# imported but unused
    __init__.py: F401
exclude =
    .git
    venv
